dsol-default-planner/src/main/java/graphplan/parser/PlannerParser.java
/* Generated By:JavaCC: Do not edit this line. PlannerParser.java */
package graphplan.parser;

import graphplan.domain.DomainDescription;
import graphplan.domain.Operator;
import graphplan.domain.Proposition;
import graphplan.domain.jason.OperatorImpl;
import graphplan.domain.jason.PropositionImpl;
import graphplan.domain.jason.SeamOperatorImpl;
import graphplan.flyweight.OperatorFactory;
import graphplan.flyweight.PropositionFactory;
import jason.asSyntax.ArithExpr;
import jason.asSyntax.ArithExpr.ArithmeticOp;
import jason.asSyntax.Atom;
import jason.asSyntax.ListTerm;
import jason.asSyntax.ListTermImpl;
import jason.asSyntax.Literal;
import jason.asSyntax.LiteralImpl;
import jason.asSyntax.NumberTerm;
import jason.asSyntax.NumberTermImpl;
import jason.asSyntax.Pred;
import jason.asSyntax.SourceInfo;
import jason.asSyntax.StringTerm;
import jason.asSyntax.StringTermImpl;
import jason.asSyntax.Structure;
import jason.asSyntax.Term;
import jason.asSyntax.UnnamedVar;
import jason.asSyntax.VarTerm;

import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.InputStream;
import java.util.ArrayList;
import java.util.List;

@SuppressWarnings("unchecked")
public class PlannerParser implements PlannerParserConstants {
        protected OperatorFactory operatorFactory;
        protected PropositionFactory propositionFactory;
        protected DomainDescription domainDescription;
        protected String source = null;

        public PlannerParser(){
                this(System.in);
                operatorFactory = OperatorFactory.getInstance();
                propositionFactory = PropositionFactory.getInstance();
        }

        /**
	 * Parses a planning problem from files containing operators and 
	 * problem a description.
	 *
	 * @param operators A file containing the domain operators
	 * @param problem   A file containing the planning problem
	 * 
	 */
        public DomainDescription parseProblem(File operators, File problem) throws FileNotFoundException, ParseException {
                List<Operator> ops = null;
                try {
                        source = operators.getPath();
                        ops = parseOperators(new FileInputStream(operators));
                } catch (ParseException e) {
                        String message = e.getMessage();
                        throw new ParseException(operators.getName()+": "+message);
                }

                DomainDescription domain = null;
                try {
                        source = problem.getPath();
                        domain = parseDomain(new FileInputStream(problem));
                } catch(ParseException e) {
                        String message = e.getMessage();
                        throw new ParseException(problem.getName()+": "+message);
                }

                domain.setOperators(ops);

                return domain;
        }

        public List<Operator> parseOperators(InputStream operators) throws ParseException {
                this.ReInit(operators);

                List<Operator> ops = new ArrayList<Operator>(operators());

                return ops;
        }

        public DomainDescription parseDomain(InputStream problem) throws ParseException {
                DomainDescription domain = null;

                this.ReInit(problem);

                List<Proposition> start = new ArrayList<Proposition>(start());

                List<Proposition> goal = new ArrayList<Proposition>(goal());

                domain = new DomainDescription(start, goal);

                return domain;
        }

        public DomainDescription parseProblem(InputStream operators, InputStream problem) throws ParseException {
                DomainDescription domain = null;

                this.ReInit(operators);
                List<Operator> ops = new ArrayList<Operator>(operators());

                this.ReInit(problem);

                List<Proposition> start = new ArrayList<Proposition>(start());

                List<Proposition> goal = new ArrayList<Proposition>(goal());

                domain = new DomainDescription(ops, start, goal);

                return domain;
        }

  final public List<OperatorImpl> operators() throws ParseException {
                                  List<OperatorImpl> ops = new ArrayList<OperatorImpl>();
                                                                  OperatorImpl op;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TK_OPERATOR:
      case TK_SEAM:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TK_OPERATOR:
        op = operator();
                        ops.add(op);
        break;
      case TK_SEAM:
        op = seam();
                    ops.add(op);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
         {if (true) return ops;}
    throw new Error("Missing return statement in function");
  }

  final public OperatorImpl operator() throws ParseException {
        Pred p;
        Structure s;
        List<Proposition> preconds;
        List<Proposition> effects;
        Token K;
//	Double reliability = null;
//	Integer time = null;
        boolean enabled = true;
    jj_consume_token(TK_OPERATOR);
    p = pred();
                                s = new Structure(p);
    jj_consume_token(TK_PRE);
    jj_consume_token(34);
    preconds = propositions();
    jj_consume_token(TK_POST);
    jj_consume_token(34);
    effects = propositions();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TK_ENABLED:
      jj_consume_token(TK_ENABLED);
      jj_consume_token(34);
      enabled = enabled();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
                OperatorImpl operator = new OperatorImpl(s,preconds,effects);
                if(!enabled){
                        operator.disable();
                }

                /*Map<String,QoSMetric> qosValues = new HashMap<String, QoSMetric>();
        for(QoSMetric operatorQoS:qos){
        	qosValues.put(operatorQoS.getName(), operatorQoS);
        }
        operator.setQoS(qosValues);*/
                {if (true) return operator;}
    throw new Error("Missing return statement in function");
  }

  final public SeamOperatorImpl seam() throws ParseException {
                           Pred p;
                                                Structure s;
                                           List<Proposition> preconds;
                                           List<Proposition> effects;
    jj_consume_token(TK_SEAM);
    p = pred();
                                                         s = new Structure(p);
    jj_consume_token(TK_PRE);
    jj_consume_token(34);
    preconds = propositions();
    jj_consume_token(TK_POST);
    jj_consume_token(34);
    effects = propositions();
                                                                                         {if (true) return new SeamOperatorImpl(s,preconds,effects);}
    throw new Error("Missing return statement in function");
  }

  final public List<Proposition> start() throws ParseException {
                             List<Proposition> start;
    jj_consume_token(TK_START);
    jj_consume_token(35);
    start = propositions();
    jj_consume_token(36);
                                                         {if (true) return start;}
    throw new Error("Missing return statement in function");
  }

  final public List<Proposition> goal() throws ParseException {
                            List<Proposition> goal;
    jj_consume_token(TK_GOAL);
    jj_consume_token(35);
    goal = propositions();
    jj_consume_token(36);
                                                         {if (true) return goal;}
    throw new Error("Missing return statement in function");
  }

  final public List<Proposition> propositions() throws ParseException {
                                    List<Proposition> props = new ArrayList<Proposition>();
                                                                          PropositionImpl p;
    if (jj_2_1(4)) {
      jj_consume_token(TK_TRUE);
                                         {if (true) return props;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TK_TRUE:
      case TK_FALSE:
      case TK_NEG:
      case TK_BEGIN:
      case TK_END:
      case ATOM:
        p = proposition();
                                                 props.add(p);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 37:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_2;
          }
          jj_consume_token(37);
          p = proposition();
                                         props.add(p);
        }
                                                         {if (true) return props;}
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public PropositionImpl proposition() throws ParseException {
                                 Literal l;
    l = literal();
                                                         {if (true) return (PropositionImpl) propositionFactory.getProposition(l.toString());}
    throw new Error("Missing return statement in function");
  }

/*List<QoSMetric> qos() : {List<QoSMetric> qos = new ArrayList<QoSMetric>(); 
						   QoSMetric operatorQos;}
{
	operatorQos = qosMetric()      {qos.add(operatorQos);}
	("," operatorQos = qosMetric() {qos.add(operatorQos);}
	   )*                          {return qos;}   
}

QoSMetric qosMetric(): { Token metricName; Token metricValue;  }
{
	metricName = <ATOM> ":" metricValue = <NUMBER> {return new QoSMetric(metricName.image, new Double(metricValue.image));}

}*/


/* The next elements were adapted from Jason */

/* Literal */
  final public Literal literal() throws ParseException {
                       Pred F; Token k; boolean type = Literal.LPos;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TK_NEG:
    case TK_BEGIN:
    case TK_END:
    case ATOM:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TK_NEG:
        jj_consume_token(TK_NEG);
                                type = Literal.LNeg;
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      F = pred();
                                {if (true) return new LiteralImpl(type,F);}
      break;
    case TK_TRUE:
      k = jj_consume_token(TK_TRUE);
                                {if (true) return Literal.LTrue;}
      break;
    case TK_FALSE:
      k = jj_consume_token(TK_FALSE);
                                {if (true) return Literal.LFalse;}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* Annotated Formulae */
  final public Pred pred() throws ParseException {
                      Token K; Pred p; Term t; List l; ListTerm lt;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATOM:
      K = jj_consume_token(ATOM);
      break;
    case TK_BEGIN:
      K = jj_consume_token(TK_BEGIN);
      break;
    case TK_END:
      K = jj_consume_token(TK_END);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                       p = new Pred(K.image);
                       p.setSrcInfo(new SourceInfo(source,K.beginLine));
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 35:
      jj_consume_token(35);
      l = terms();
      jj_consume_token(36);
                      p.addTerms(l);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      lt = list();
                      p.setAnnots(lt);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

/* List of terms */
  final public List terms() throws ParseException {
                 List listTerms = new ArrayList(); Term v;
    v = term();
                         listTerms.add(v);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 37:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
      jj_consume_token(37);
      v = term();
                         listTerms.add(v);
    }
                         {if (true) return listTerms;}
    throw new Error("Missing return statement in function");
  }

  final public Term term() throws ParseException {
                      Term u; Object o;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TK_TRUE:
    case TK_FALSE:
    case TK_NEG:
    case TK_BEGIN:
    case TK_END:
    case ATOM:
      u = literal();
                      Literal l = (Literal)u;
                      if (l.isAtom() && !l.negated()) {
                         Atom a = new Atom(l.getFunctor());
                         if(l.getSrcInfo() != null){
                                 a.setSrcInfo(new SourceInfo(source,l.getSrcInfo().getSrcLine()));
                         }
                         {if (true) return a;}
                      }
      break;
    case 38:
      u = list();
      break;
    case VAR:
    case NUMBER:
    case UNNAMEDVAR:
    case 42:
      o = arithm_expr();
                      {if (true) return (Term)o;}
      break;
    case STRING:
      u = string();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return u;}
    throw new Error("Missing return statement in function");
  }

  final public ListTermImpl list() throws ParseException {
                        ListTermImpl lt = new ListTermImpl(); ListTerm last;
                        Token K; Term f;
    jj_consume_token(38);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
    case TK_TRUE:
    case TK_FALSE:
    case TK_NEG:
    case TK_BEGIN:
    case TK_END:
    case NUMBER:
    case STRING:
    case ATOM:
    case UNNAMEDVAR:
    case 38:
    case 42:
      f = term();
                            last = lt.append(f);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 37:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_4;
        }
        jj_consume_token(37);
        f = term();
                            last = last.append(f);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 39:
        jj_consume_token(39);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VAR:
          K = jj_consume_token(VAR);
                            last.setNext(new VarTerm(K.image));
          break;
        case UNNAMEDVAR:
          K = jj_consume_token(UNNAMEDVAR);
                            last.setNext(new UnnamedVar());
          break;
        case 38:
          f = list();
                            last = last.concat((ListTerm)f);
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(40);
                            {if (true) return lt;}
    throw new Error("Missing return statement in function");
  }

/* arithmetic expression */
  final public Object arithm_expr() throws ParseException {
                                Object t1, t2; ArithmeticOp op;
    t1 = arithm_expr_trm();
                                op = ArithmeticOp.none;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 41:
    case 42:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 41:
        jj_consume_token(41);
                                op = ArithmeticOp.plus;
        break;
      case 42:
        jj_consume_token(42);
                                op = ArithmeticOp.minus;
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = arithm_expr();
                                if (!(t1 instanceof NumberTerm)) {
                                   {if (true) throw new ParseException("ArithExpr: first operand is not numeric or variable.");}
                                }
                                if (!(t2 instanceof NumberTerm)) {
                                   {if (true) throw new ParseException("ArithExpr: second operand is not numeric or variable.");}
                                }
                                {if (true) return new ArithExpr((NumberTerm)t1, op, (NumberTerm)t2);}
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
                                {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public Object arithm_expr_trm() throws ParseException {
                                  Object t1, t2; ArithmeticOp op;
    t1 = arithm_expr_factor();
                                  op = ArithmeticOp.none;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TK_INTDIV:
    case TK_INTMOD:
    case 43:
    case 44:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 43:
        jj_consume_token(43);
                                  op = ArithmeticOp.times;
        break;
      case 44:
        jj_consume_token(44);
                                  op = ArithmeticOp.div;
        break;
      case TK_INTDIV:
        jj_consume_token(TK_INTDIV);
                                  op = ArithmeticOp.intdiv;
        break;
      case TK_INTMOD:
        jj_consume_token(TK_INTMOD);
                                  op = ArithmeticOp.mod;
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = arithm_expr_trm();
                                  if (!(t1 instanceof NumberTerm)) {
                                    {if (true) throw new ParseException("ArithTerm: first operand is not numeric or variable.");}
                                  }
                                  if (!(t2 instanceof NumberTerm)) {
                                    {if (true) throw new ParseException("ArithTerm: second operand is not numeric or variable.");}
                                  }
                                  {if (true) return new ArithExpr((NumberTerm)t1, op, (NumberTerm)t2);}
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
                                  {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }
